#174 fix homepage spacing

--- a/src/scss/_components/_section.scss
+++ b/src/scss/_components/_section.scss
@@ -41,7 +41,7 @@
 }
 
 .section--hero {
-  padding: 25px 0 125px;
+  padding: 25px 0 80px;
   overflow: hidden;
 
   h1 {
